@@ -875,6 +875,8 @@ void CScrollbar::calculateScrollerLength ()
 			factor = 0;
 		newScrollerLength = (CCoord) (getViewSize ().height () * factor);
 	}
+	if (newScrollerLength < 8)
+		newScrollerLength = 8;
 	if (newScrollerLength != scrollerLength)
 	{
 		scrollerLength = newScrollerLength;
